# IKProject

./: CMakeLists.txt  D-H-Jacobian.cpp  D-H-JacobianTest.cpp  D_H_Jacobian.cpp  D_H_Jacobian.h  D_H_Parameterization.cpp  IK.h  KuKa_KR5_R850_D_H.cpp  KuKa_KR5_R850_D_H.h  LoadAndWriteAnimation_LUA_KukaRobot_Test.cpp  README.md  Utils.cpp  config.h  main.cpp
LUA/: Simple1Joint.lua  kuka+cube.lua  kuka.lua
fabrikBuild/models/: chain.lua
include/: IK.h  KuKa_KR5_R850_D_H.h  Utils.h  axisLimit.hpp  ccd.h  fabrik.hpp  fabrik2.h  fabrik3.h  plane.hpp  point.hpp
include/IKProject/: D_H_Parameterization.h  HierarchyOfDHParameterization.h  KuKa_KR5_R850_D_H.h  Trihedral.h  Utils.h
meshes/: kuka_with_label_arrows.mtl
models/: chain.lua  target2.lua
src/: D_H_Jacobian.cpp  D_H_Parameterization.cpp  HierarchyOfDHParameterization.cpp  KuKa_KR5_R850_D_H.cpp  Trihedral.cpp  Utils.cpp  ccd.cpp  fabrik.cpp  fabrik2.cpp  fabrik3.cpp  main.cpp  point.cpp
tests/: Build_KuKa_KR5_R850_D_H-Test.cpp  CCD_With_RBDL_Test.cpp  D-H-DOF_Change-Test.cpp  D-H-DOF_Variation-Test.cpp  D-H-JacobianTest.cpp  D-H-Test.cpp  ExtractGlobalPositionAndOrientationOfJoints.cpp  Fabrik_Test.cpp  IK_Test.cpp  LoadAndWriteAnimation_LUA_KukaRobot_Test.cpp  Simple1Joint_ModelingAndLoading_Test.cpp  Simple2Joint_ModelingAndLoading_Test.cpp  Trihedral_Orientation_In_Each_Frame_Test.cpp  ccd_Test.cpp
